# moxnotify

./: .gitignore  Cargo.toml  LICENSE  PACKAGING.md  README.md  Tiltfile  dump.rdb  flake.nix  pl.mox.notify.service.in  rustc-ice-2025-08-10T13_02_58-189224.txt  rustc-ice-2025-08-30T11_24_35-2041107.txt
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: build.yaml  deploy.yaml  push-to-cachix.yml  test.yaml
client/: Cargo.toml  build.rs
client/src/: css.rs  grpc.rs  history.rs  layout.rs  main.rs  styles.rs
client/src/audio/: mod.rs
client/src/components/: icons.rs  mod.rs  notification.rs  progress.rs
client/src/components/button/: action.rs  anchor.rs  dismiss.rs  mod.rs
client/src/components/text/: body.rs  summary.rs
client/src/config/: button.rs  color.rs  keymaps.rs  mod.rs
client/src/dbus/: mod.rs  moxnotify.rs
client/src/dbus/portal/: open_uri.rs
client/src/input/: keyboard.rs  mod.rs  pointer.rs
client/src/manager/: mod.rs  view.rs
client/src/rendering/: mod.rs  text.rs  text_renderer.rs
client/src/rendering/surface/: mod.rs  wgpu_surface.rs
client/src/utils/: image_data.rs  mod.rs
client/src/wayland/: idle_notify.rs  mod.rs
client/tests/: integration.rs
collector/: Cargo.toml  build.rs
collector-dbus/: Cargo.toml  build.rs
collector-dbus/src/: dbus.rs  image_data.rs  main.rs
collector/src/: dbus.rs  image_data.rs  main.rs
config/: Cargo.toml  build.rs
config/src/: lib.rs  loader.rs  types.rs
config/src/client/: border.rs  button.rs  color.rs  mod.rs  partial.rs  text.rs
config/styles/: default.css
contrib/systemd/: moxnotify.service.in
control_plane/: Cargo.toml  build.rs
control_plane/src/: history.rs  main.rs
ctl/: Cargo.toml
ctl/src/: main.rs  notify.rs
daemon/: Cargo.toml
daemon/src/: main.rs
daemon/src/audio/: mod.rs  playback.rs
daemon/src/audio/sound_device/: device.rs  mod.rs
daemon/src/components/: icons.rs  mod.rs  notification.rs  progress.rs
daemon/src/components/button/: action.rs  anchor.rs  dismiss.rs  mod.rs
daemon/src/components/text/: body.rs  markup.rs  summary.rs
daemon/src/config/: border.rs  button.rs  color.rs  keymaps.rs  mod.rs  partial.rs  text.rs
daemon/src/dbus/: moxnotify.rs  xdg.rs
daemon/src/dbus/portal/: mod.rs
daemon/src/history/: mod.rs
daemon/src/input/: keyboard.rs  mod.rs  pointer.rs
daemon/src/manager/: mod.rs  timer.rs  view.rs
daemon/src/rendering/: mod.rs  text_renderer.rs  wgpu_state.rs
daemon/src/rendering/shape_renderer/: mod.rs  shader.wgsl
daemon/src/rendering/surface/: mod.rs  wgpu_surface.rs
daemon/src/rendering/texture_renderer/: mod.rs
daemon/src/utils/: buffers.rs  image_data.rs  mod.rs  taffy.rs
daemon/src/wayland/: activation_token.rs  idle_notify.rs  registry.rs
daemon/tests/: integration.rs
indexer/: Cargo.toml  build.rs
indexer/src/: main.rs
janitor/: Cargo.toml
janitor/src/: main.rs
nix/: home-manager.nix  package.nix  stylix.nix  treefmt.nix  webui.nix
proto/: client.proto  collector.proto  common.proto  indexer.proto  scheduler.proto  types.proto
scheduler/: Cargo.toml  build.rs
scheduler/src/: client_state.rs  main.rs  timeout_scheduler.rs  view_range.rs
searcher/: Cargo.toml  build.rs
searcher/src/: main.rs
webui/: next.config.js  package.json
webui/app/: globals.css  layout.tsx  page.tsx
webui/components/: filter-sidebar.tsx  notification-chart.tsx  notification-dashboard.tsx  notification-list.tsx  search-bar.tsx  time-range-picker.tsx
webui/lib/: mock-data.ts  types.ts
