[workspace]
members = ["daemon", "ctl"]
resolver = "2"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[workspace.package]
keywords = ["notification", "daemon", "wayland", "keyboard", "desktop"]
categories = [
  "gui",
  "command-line-utilities",
  "os",
  "visualization",
  "multimedia",
]
edition = "2024"
license = "MIT"
repository = "https://github.com/mox-desktop/moxnotify"
version = "0.1.0"
description = "Feature-rich hardware-accelerated keyboard driven Wayland notification daemon."
readme = "README.md"
