[package]
name = "collector"
description.workspace = true
readme.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
env_logger = { version = "0.11.6", default-features = false }
serde = { version = "1.0.217", features = ["rc"], default-features = false }
futures-lite = { version = "2.6.0", default-features = false }
zbus = { version = "5.5.0", features = ["tokio"], default-features = false }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
anyhow = { version = "1.0.95", default-features = false }
serde_json = "1.0.140"
tracing = { version = "0.1.41", default-features = false }
log = "0.4.27"
tonic = "0.14.2"
calloop = { version = "0.14.2", features = ["executor"] }
url = { version = "2.5.4", default-features = false }
image = { version = "0.25.6", default-features = false, features = [
  "jpeg",
  "ico",
  "webp",
  "rayon",
] }
fast_image_resize = "5.1.1"
tonic-prost = "0.14.2"
prost = "0.14.1"
pollster = "0.4.0"

[build-dependencies]
tonic-prost-build = "0.14.2"
