[package]
name = "control_plane"
description.workspace = true
readme.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
env_logger = { version = "0.11.6", default-features = false }
serde = { version = "1.0.217", features = [
  "derive",
  "rc",
], default-features = false }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
anyhow = { version = "1.0.95", default-features = false }
serde_json = "1.0.140"
log = "0.4.27"
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
redis = { version = "1.0.1", features = ["tokio-comp"] }
tvix_serde = { git = "https://code.tvl.fyi/depot.git", rev = "a17a8928c6193fc758393a22bd9e71b8439ebfd3", package = "tvix-serde" }
config = { path = "../config" }

[build-dependencies]
tonic-prost-build = "0.14.2"
