[package]
name = "ctl"
description.workspace = true
readme.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
zbus = { version = "5.5.0", default-features = false }
anyhow = { version = "1.0.95", default-features = false }
clap = "4.5.27"
tokio = "1.43.0"
