[package]
name = "indexer"
keywords.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
tantivy = "0.25.0"
tonic = "0.14.2"
prost = "0.14.1"
log = "0.4.27"
env_logger = { version = "0.11.6", default-features = false }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread", "sync"] }
anyhow = "1.0.100"
serde_json = "1.0.145"
redis = { version = "1.0.1", features = ["tokio-comp"] }
config = { path = "../config" }
serde = "1.0.228"

[build-dependencies]
tonic-prost-build = "0.14.2"
