[package]
name = "janitor"
keywords.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
tantivy = "0.25.0"
tokio = { version = "1.45.0", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
] }
config = { path = "../config" }
env_logger = { version = "0.11.6", default-features = false }
log = "0.4.27"
anyhow = "1.0.100"
clap = { version = "4.5.27", features = ["derive"] }
