[package]
name = "scheduler"
keywords.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
log = "0.4.27"
env_logger = { version = "0.11.6", default-features = false }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread", "sync"] }
anyhow = "1.0.100"
tokio-stream = "0.1.17"
redis = { version = "1.0.1", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
config = { path = "../config" }
clap = { version = "4.5.27", features = ["derive"] }

[build-dependencies]
tonic-prost-build = "0.14.2"
