[package]
name = "searcher"
keywords.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
axum = "0.8.7"
chrono = "0.4"
serde = "1.0.228"
serde_json = "1.0.145"
tantivy = "0.25.0"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread", "sync"] }
config = { path = "../config" }
env_logger = "0.11.8"
log = "0.4"
